# rust-web-service

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
rocket-postgres/: .env  CHANGELOG.md  README.md  docker-compose.yml  init.sql
rocket-postgres/migrations/2021-11-07-013702_create_users/: up.sql
rocket-postgres/src/: main.rs
rocket-postgres/src/db/: crud.rs
rocket-postgres/src/routes/: health.rs  mod.rs  user.rs
src/: config.rs  lib.rs  main.rs  schema.rs
src/db/: mod.rs
src/models/: user.rs
tests/: health.rs
tests/common/: utils.rs
