[package]
name = "wonkyapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
rocket_codegen = "0.4.10"
diesel = { version = "1.4.8", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
serde_json = "1.0.68"
serde = { version = "1.0.130", features = ["derive"] }
lazy_static = "1.4.0"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json"]

[dev-dependencies]
once_cell = "1.8.0"